<resources>
    <string name="app_name">Ride On!</string>
    <string name="lbl_ride_name">Name Your Ride</string>
    <string name="lbl_source">Starting point</string>
    <string name="lbl_destination">Destination</string>
    <string name="lbl_date_of_ride">Date of Your Ride</string>
    <string name="lbl_start_time_of_ride">Time</string>
    <string name="lbl_enter_heart_rate">Enter Heart Rate</string>
    <string name="lbl_enter_cadence">Enter Cadence</string>
    <string name="lbl_enter_calories_burned">Enter Calories Burned</string>
    <string name="lbl_post_your_experience_to_blog">Post Your Experience to Blog</string>
    <!--<string name="lbl_source">Starting point</string>-->
    <string name="createridebtn">Create a Ride</string>
    <string name="showMyRides">Show Rides</string>
    <string name="action_settings">Settings</string>
    <string name="sign_out">signout</string>
    <string name="facebook_app_id">640940699438875</string>
</resources>
